Fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
 
 .container {
   display: grid;
-  width: 100vw;
   height: 100vh;
 }
 
